# Asteroids-CPP

./: C++  CMakeLists.txt  CMakeListsWeb.txt  main.cpp  readme
src/: Constants.h  EntityManager.cpp  EntityManager.hpp  EnumMenuItemID.hpp  GlobalObjects.hpp  Main.cpp  main.cpp
src/Components/Asteroid/: ComponentAsteroid.hpp
src/Components/Boundary/: ComponentWrapperBoundary.hpp
src/Components/Game/: ComponentBackground.hpp  ComponentHighScore.hpp  ComponentLives.hpp  ComponentScene.hpp  ComponentScore.hpp
src/Components/MainMenu/: ComponentMenuItem.hpp
src/Components/Menu/: ComponentMenuItem.hpp
src/Components/Physics/: ComponentCollider.hpp  ComponentTransform.hpp  ComponentVelocity.hpp
src/Components/Player/: ComponentAcceleration.hpp  ComponentBulletTag.hpp  ComponentLives.hpp  ComponentPlayer.hpp  ComponentPlayerInput.hpp  ComponentScore.hpp  ComponentWeapon.hpp
src/Components/Rendering/: ComponentRender.hpp
src/Components/UI/: ComponentLivesText.hpp  ComponentScoreText.hpp  ComponentText.hpp  ScoreTag.hpp  TextUI.hpp
src/Entities/Game/: EntityAsteroid.hpp  EntityGame.cpp  EntityGame.hpp  EntityPlayer.cpp  EntityPlayer.hpp
src/Entities/Level/: EntityAsteroid.cpp  EntityAsteroid.hpp  EntityBullet.cpp  EntityBullet.hpp  EntityPlayer.cpp  EntityPlayer.hpp
src/Entities/MainMenu/: EntityMainMenu.cpp  EntityMainMenu.hpp
src/Entities/MenuItems/: EntityMenuItem.cpp  EntityMenuItem.hpp
src/Entities/UI/: EntityLevelUI.cpp  EntityLevelUI.hpp  EntityScoreUI.cpp  EntityScoreUI.hpp
src/Events/: Event.hpp  EventDeath.hpp  EventMainMenu.hpp  EventManager.hpp  EventPause.hpp  EventStartGame.hpp  EventUnpause.hpp
src/Input/: Input.cpp  Input.hpp
src/Resources/ResourceManager/: ResourceManager.cpp  ResourceManager.hpp
src/Scenes/: Scene.cpp  Scene.hpp
src/Scenes/Base/: Scene.cpp  Scene.hpp
src/Scenes/Game/: SceneGame.cpp  SceneGame.hpp  SceneGameUI.cpp  SceneGameUI.hpp
src/Scenes/Level/: SceneLevel.cpp  SceneLevel.hpp  SceneLevelUI.cpp  SceneLevelUI.hpp
src/Scenes/Manager/: SceneManager.cpp  SceneManager.hpp
src/Scenes/Scene/: Scene.cpp  Scene.hpp
src/Scenes/SceneBuilder/: SceneBuilder.cpp  SceneBuilder.hpp
src/Systems/: System.cpp
src/Systems/Asteroid/: SystemAsteroidSpawner.cpp  SystemAsteroidSpawner.hpp
src/Systems/Base/: ISystem.cpp  ISystem.hpp  System.cpp  System.hpp
src/Systems/Bounds/: SystemOutOfBound.cpp  SystemOutOfBound.hpp  SystemWrapping.cpp  SystemWrapping.hpp
src/Systems/Buttons/: SystemMouseHover.cpp  SystemMouseHover.hpp
src/Systems/MainMenu/: SystemMainMenuInput.cpp  SystemMainMenuInput.hpp  SystemMenuInput.cpp  SystemMenuInput.hpp  SystemMouseHover.cpp  SystemMouseHover.hpp
src/Systems/Manager/: SystemManager.cpp  SystemManager.hpp
src/Systems/Menu/: SystemMenuInput.cpp  SystemMenuInput.hpp
src/Systems/PauseMenu/: SystemPauseMenuToggle.cpp  SystemPauseMenuToggle.hpp
src/Systems/Physics/: SystemCollider.cpp  SystemCollider.hpp  SystemCollision.cpp  SystemCollision.hpp  SystemMovement.cpp  SystemMovement.hpp
src/Systems/Player/: SystemLives.cpp  SystemLives.hpp  SystemPlayerRotate.cpp  SystemPlayerRotate.hpp  SystemPlayerThrust.cpp  SystemPlayerThrust.hpp  SystemScore.cpp  SystemScore.hpp  SystemUserInput.cpp  SystemUserInput.hpp  SystemWeapon.cpp  SystemWeapon.hpp
src/Systems/Rendering/: SystemRender.cpp  SystemRender.hpp
src/Systems/Saving/: SystemSaveHighScore.cpp  SystemSaveHighScore.hpp
src/Systems/Spawner/: SystemSpawner.cpp  SystemSpawner.hpp
src/Systems/System/: ISystem.hpp
src/Systems/UI/: SystemHUD.cpp  SystemHUD.hpp
src/components/: Asteroid.hpp  AsteroidComponent.hpp  BulletTag.hpp  Collider.hpp  ColliderComponent.hpp  Player.hpp  PlayerComponent.hpp  PlayerInput.hpp  PlayerInputComponent.hpp  PositionComponent.hpp  Render.hpp  RenderComponent.hpp  ScoreTag.hpp  TextUI.hpp  Transform.hpp  TransformComponent.hpp  UITag.hpp  Velocity.hpp  VelocityComponent.hpp  Weapon.hpp  WeaponComponent.hpp  WrapperBoundary.hpp  WrapperBoundaryComponent.hpp
src/entities/: Asteroid.cpp  Asteroid.hpp  AsteroidEntity.hpp  Bullet.cpp  Bullet.hpp  BulletEntity.hpp  Player.cpp  Player.hpp  PlayerEntity.hpp  ScoreUI.cpp  ScoreUI.hpp
src/scenes/: IScene.hpp  Level.hpp  Scene.cpp  Scene.hpp  Scene0.hpp  SceneIManager.cpp  SceneIManager.hpp  SceneManager.cpp  SceneManager.hpp
src/systems/: AsteroidSpawner.hpp  AsteroidSpawnerSystem.hpp  Collider.hpp  ColliderSystem.hpp  Collision.hpp  CollisionSystem.hpp  ISystem.hpp  Manager.cpp  Movement.hpp  MovementSystem.hpp  OutOfBound.hpp  OutOfBoundSystem.hpp  PlayerRotate.hpp  PlayerRotateSystem.hpp  PlayerThrust.hpp  PlayerThrustSystem.hpp  Render.cpp  Render.hpp  RenderSystem.hpp  System.cpp  System.hpp  SystemManager.cpp  SystemManager.hpp  UserInput.hpp  UserInputSystem.hpp  Weapon.hpp  WeaponSystem.hpp  Wrapping.hpp  WrappingSystem.hpp
test/: CMakeLists.txt  Test_SystemMovement.cpp  Test_SystemPlayerThrust.cpp  hello_test.cpp
